# cosmic-ext-applet-sysinfo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  io.github.cosmic_utils.sysinfo-applet.json  justfile
.github/workflows/: rust.yml
data/: io.github.cosmic_utils.sysinfo-applet.desktop  io.github.cosmic_utils.sysinfo-applet.metainfo.xml
extra/: applet_sysinfo.desktop
i18n/cs/: cosmic_ext_applet_sysinfo.ftl
i18n/en/: cosmic_ext_applet_sysinfo.ftl
i18n/pl/: cosmic_ext_applet_sysinfo.ftl
i18n/pt-BR/: cosmic_ext_applet_sysinfo.ftl
i18n/sv/: cosmic_ext_applet_sysinfo.ftl
src/: applet.rs  config.rs  data.rs  i18n.rs  lib.rs  main.rs  template.rs
src/data/: mod.rs
src/snapshots/: cosmic_ext_applet_sysinfo__template__test__grouped by category.snap  cosmic_ext_applet_sysinfo__template__test__minimal.snap  cosmic_ext_applet_sysinfo__template__test__network focused.snap  cosmic_ext_applet_sysinfo__template__test__parse.snap  cosmic_ext_applet_sysinfo__template__test__temps only.snap
src/template/: mod.rs  parse.rs  render.rs
src/template/snapshots/: all_metrics_with_separators.snap  cosmic_ext_applet_sysinfo__template__parse__test__all metrics with separators.snap  cosmic_ext_applet_sysinfo__template__test__all metrics with separators.snap  cosmic_ext_applet_sysinfo__template__test__grouped by category.snap  cosmic_ext_applet_sysinfo__template__test__minimal.snap  cosmic_ext_applet_sysinfo__template__test__network focused.snap  cosmic_ext_applet_sysinfo__template__test__temps only.snap  escaped_braces.snap  escaped_then_variable.snap  grouped_by_category.snap  minimal.snap  mixed_with_ips.snap  network_focused.snap  public_ips.snap  temps_only.snap
