[package]
name = "cosmic-ext-applet-sysinfo"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["rwxroot <rwxroot@proton.me>"]
homepage = "https://github.com/cosmic-utils/cosmic-ext-applet-sysinfo/"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-sysinfo.git"

# insta benefits from being compiled with optimizations, even in debug mode
#
# see https://insta.rs/docs/quickstart/
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "fat"

[dependencies]
backoff = { version = "0.4.0", default-features = false }
i18n-embed = { version = "0.16.0", default-features = false, features = [
  "rust-embed",
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = { version = "0.10.0", default-features = false }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
	"applet",
] }
rust-embed = { version = "8.11.0", default-features = false }
sysinfo = { version = "0.38.3", default-features = false, features = [
	"system",
	"network",
	"component",
] }
tracing = { version = "0.1.44", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
	"ansi",
	"env-filter",
] }

[dev-dependencies]
insta = "1.46.3"
